--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "prepare": "husky install",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "dev": "ts-node-dev src/app.ts"
   },
   "dependencies": {
     "express": "^4.17.1"
@@ -26,6 +27,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.2",
     "prettier": "^2.4.1",
+    "prisma": "^3.2.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   },
