--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "scripts": {
     "prepare": "husky install",
     "commit": "git-cz",
-    "dev": "ts-node-dev src/app.ts"
+    "dev": "ts-node-dev --exit-child src/app.ts"
   },
   "dependencies": {
+    "@prisma/client": "3.2.1",
+    "axios": "^0.23.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "commitizen": "^4.2.4",
@@ -28,7 +32,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.2",
     "prettier": "^2.4.1",
-    "prisma": "^3.2.1",
+    "prisma": "3.2.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   },
