feat: integrate with socke.io

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NLWHEAT_GITHUB_CLIENT_SECRET=503cf8c12dacc8d80fc87dfd010f1d74943d211e
 NLWHEAT_GITHUB_CLIENT_ID=25cf3bb86c08f2008eae
+
+JWT_SECRET=1a99750c36644426738dca4e9926354d
