--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,9 @@
   "rules": {
     "prettier/prettier": "error",
     "no-use-before-define": "off",
+    "class-methods-use-this": "off",
+    "import/prefer-default-export": "off",
+    "camelcase": "off",
     "@typescript-eslint/no-use-before-define": [
       "error"
     ],
